# training

php/trainer/: .dockerignore  Makefile  composer.json  docker-compose.yml
php/trainer/docker/: Dockerfile
php/trainer/tests/: SampleTest.php
python/teamA/src/: auto_purchase_machine.py  fizzbuzz.py  vending_machine.py
python/teamA/test/: test_fizzbuzz.py  test_sample.py  test_vending_machine.py
python/teamB/src/: fizzbuzz.py  jihanki.py
python/teamB/test/: test_fizzbuzz.py  test_jihanki.py
python/teamC/: .gitignore
python/teamC/src/: fizzbuzz.py  vending_machine.py
python/teamC/test/: test_fizzbuzz.py  (+3 more)
python/trainer/: .dockerignore  .gitignore  Makefile  docker-compose.yml  pyproject.toml
python/trainer/docker/: Dockerfile
python/trainer/src/: holiday.py  vending_machine.py
python/trainer/src/legacy/: tennis.py
python/trainer/test/: test_add.py  test_vending_machine.py  test_vending_machine2.py  vender_machine.py
python/trainer/tests/: test_sample.py  test_tennis.py
python/trainer/tests/legacy/: test_tennis.py
typescript/: .gitignore
typescript/teamA/: package-lock.json
typescript/teamC/: .gitignore
typescript/teamD/: package-lock.json
typescript/teamE/: jest.config.js
typescript/trainer/: .dockerignore  Makefile  docker-compose.yml  jest.config.js  package.json
web-react/trainer/: .eslintrc.cjs  Makefile  docker-compose.yml  index.html  jest.config.cjs  package.json  tsconfig.json  vite.config.ts
web-vue/trainer/: Makefile  README.md  bun.lockb  bunfig.toml  docker-compose.yml  jest.config.cjs  package.json  tsconfig.json
(+53 files in other folders)
